Fix padding issues on mobile/tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header {
 }
 
 .logo {
-    font-size: 35px;
+    font-size: 28px;
     cursor: pointer;
     padding: 10px;
     background-color: #FEA836;
@@ -183,7 +183,7 @@ i {
     text-align: center;
     align-items:normal;
     gap:10px;
-    margin:1em;
+    margin:3em 1em;
 }
 
 .menucontainer a {
@@ -541,7 +541,9 @@ footer ul li a {
     .charactericon {
         width:60%; 
     }
-    
+    .logo {
+        font-size:35px;
+    }
 }
 
 @media only screen and (min-width: 980px) {
